refactor: shot of Frame
각 투구의 순서를 붙였던(first, second, third) 메서드 설계 변경
 - 명시적이고 예외상황의 검증에는 용이
 - 하지만 지속적인 흐름에는 방해가 됨
 - 그냥 다음 투구, 다음 투구... 이런식으로
 - nextShot